--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -24,6 +24,9 @@ commands:
   toggleendaccessibility:
     description: ToggleEndAccessibility Command [TEAM ONLY]
 
+  logoutput:
+    description: LogOutputEnabled Command [TEAM ONLY]
+
   reply:
     description: Antwortet auf eine Nachricht, die an dich per /msg gesendet wurde
     aliases:
