--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,10 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>papermc</id>
+            <url>https://repo.papermc.io/repository/maven-public/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -112,6 +116,7 @@
             <classifier>remapped-mojang</classifier>
             <scope>provided</scope>
         </dependency>
+
 
     </dependencies>
 </project>
