Add custom death messages & Fix stuff

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -41,6 +41,8 @@ commands:
     description: Setzt ein Kopfgeld auf einen Spieler
     aliases:
       - kopfgeld
+  deathlocation:
+    description: uh
 
   spectatestebadon:
     description: hmmmmmmmmmm SuS
