Add X-Ray detection

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -46,3 +46,7 @@ commands:
 
   spectatestebadon:
     description: hmmmmmmmmmm SuS
+  checksusplayeractivity:
+    description: hmmmmmmmmmm SuS
+  afk:
+    description: SET AFKKKK YEAH
