--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -50,3 +50,5 @@ commands:
     description: hmmmmmmmmmm SuS
   afk:
     description: SET AFKKKK YEAH
+  weristimnether:
+    description: Wer stoert mal wieder beim XP farmen...
