--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: ProjectPlugin
 version: '${project.version}'
 main: wtf.melonthedev.projectplugin.Main
 api-version: 1.18
-authors: [ Melonthedev ]
+authors: [ Melonthedev, Stebadon ]
 description: A little plugin for our project :)
 website: melonthedev.wtf
 
@@ -21,40 +21,48 @@ commands:
     description: Farbcodes, die im Chat und in deinem Status genutzt werden können
     aliases:
       - colors
+
   toggleendaccessibility:
     description: ToggleEndAccessibility Command [TEAM ONLY]
 
   logoutput:
-    description: LogOutputEnabled Command [TEAM ONLY]
+    description: LogOutput Command [TEAM ONLY]
 
   reply:
     description: Antwortet auf eine Nachricht, die an dich per /msg gesendet wurde
     aliases:
       - r
+
   message:
     description: Sendet eine Nachricht an einen Spieler
     aliases:
       - msg
       - whisper
       - tell
+
   bounty:
     description: Setzt ein Kopfgeld auf einen Spieler
     aliases:
       - kopfgeld
+
   deathlocation:
-    description: uh
+    description: Zeigt deine Todesposition an
 
   spectatestebadon:
     description: hmmmmmmmmmm SuS
   checksusplayeractivity:
-    description: hmmmmmmmmmm SuS
+    description: hmmmmmmmmmm SuS PLAYER ACTIVITY
   afk:
-    description: SET AFKKKK YEAH
+    description: Just be AFK whenever you want if you dont want to wait
   weristimnether:
-    description: Wer stoert mal wieder beim XP farmen...
+    description: Wer nervt mal wieder beim XP farmen...
   tempban:
-    description: Bans a player temporarily
+    description: Bans a player temporarily [TEAM ONLY]
   joinmessage:
-    description: Sets a joinmessage for a specific player
+    description: Sets a joinmessage for a specific player [TEAM ONLY]
   isee:
-    description: ISEEEEE YOU
+    description: ISEEEEE YOU [TEAM ONLY]
+  hardcore:
+    description: Hardcore Settings [TEAM ONLY]
+  survivalprojekt:
+    description: SurvivalProjekt Utils [TEAM ONLY]
