Update Commands, Fix Bugs, Add Hardcore Mechanics, idk

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -66,3 +66,6 @@ commands:
     description: Hardcore Settings [TEAM ONLY]
   survivalprojekt:
     description: SurvivalProjekt Utils [TEAM ONLY]
+
+  skippvpcooldown:
+    description: Skips the PvP Cooldown
