--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -91,3 +91,6 @@ commands:
 
   logoutput:
     description: LogOutput Command [TEAM ONLY]
+
+  donators:
+    description: Manage donators server permissions [TEAM ONLY]
