--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -99,3 +99,6 @@ commands:
 
   manageplayer:
     description: Manages a specific player [TEAM ONLY]
+
+  timer:
+    description: Create and manage a timer [TEAM ONLY]
