Block Lifesteal disabled features (totems, elytra, netherite)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -51,6 +51,9 @@ hardcore:
 # /lifesteal
 lifesteal:
   enabled: false
+  blocknetherite: true
+  blockelytra: true
+  blocktotems: true
   hearts: {}
 
 # Entries: uuid: remainingMinutes
