Add Apache Commons Lang 3

--- a/pom.xml
+++ b/pom.xml
@@ -81,5 +81,10 @@
             <artifactId>adventure-text-minimessage</artifactId>
             <version>4.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.6</version>
+        </dependency>
     </dependencies>
 </project>
