--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <name>ProjectPlugin</name>
 
-    <description>A little plugin for our project :)</description>
+    <description>Plugin for Survivalprojekt</description>
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -73,7 +73,7 @@
         <dependency>
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
-            <version>1.19.2-R0.1-SNAPSHOT</version>
+            <version>1.19.3-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
