--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,12 @@
 name: ProjectPlugin
 version: '${project.version}'
 main: wtf.melonthedev.projectplugin.Main
-api-version: 1.18
+api-version: 1.19
 authors: [ Melonthedev, Stebadon ]
 description: A little plugin for our project :)
 website: mcsurvivalprojekt.de
+softdepend:
+  - Log4Minecraft
 
 commands:
   status:
