--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -62,9 +62,9 @@ startcommand: [
   "resetFood",
   "resetHealth",
   "blockEndAccess",
-  "resetTime"
-  "resetPvpCooldowns"
-  "resetTotalWorldTime"
+  "resetTime",
+  "resetPvpCooldowns",
+  "resetTotalWorldTime",
 ]
 # /hardcore
 hardcore:
