--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
 name: ProjectPlugin
 version: '${project.version}'
 main: wtf.melonthedev.projectplugin.Main
-api-version: 1.19
+api-version: 1.20
 authors: [ Melonthedev, Stebadon ]
-description: A little plugin for our project :)
+description: Base plugin for our projects ;)
 website: mcsurvivalprojekt.de
 softdepend:
   - Log4Minecraft
