--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -108,5 +108,8 @@ commands:
   velocity:
     description: Gives players velocity [TEAM ONLY]
 
+  target:
+    description: Target Command [TEAM ONLY]
+
   runsd:
     description: Runs commands server-dispatched [TEAM ONLY]
